2008-02-24  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (delete_connection_cb): fix removal of connections from the list
			and internal connection hash

2008-02-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_exported_connection_changed): use exact compare

2008-02-20  Dan Williams  <dcbw@redhat.com>

	* Adapt to NM changes in NMConnection and NMExportedConnection

	* Clean up a lot of the exported connection and settings handling

2008-02-14  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
	  src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- Revamp the connection list; tabs for each connection type, show the
			time the last time the network was used, and hook up the
			double-click handler

2008-02-12  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_context_menu_create): give the Edit Connections menu item the
			stock edit icon

2008-02-07  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_edit_connections_cb): spawn connection editor

2008-02-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- Add an icon column to the list view showing what connection type each
			connection is

2008-02-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  icons/Makefile.am
	  icons/nm-device-wwan.png
		- Add a mobile broadband device icon

2008-02-04  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
		- (cdma_add_menu_item, gsm_add_menu_item): add a default connection
			item when no connections are defined so that at least something can
			be picked from the menu

2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
		- (add_disconnect_item, gsm_menu_item_deactivate): add Disconnect...
			menu item, deactivate the device when it's selected